fix extra white space

--- a/main.css
+++ b/main.css
@@ -52,7 +52,7 @@ body {
   -moz-justify-content: center;
   -ms-justify-content: center;
   justify-content: center;
-  margin-top: 200px;
+  padding-top: 200px;
 }
 
 .container .photo {
